--- a/index.html
+++ b/index.html
@@ -303,10 +303,15 @@
                 <i class="fas fa-exclamation-triangle"></i>
                 <h3>Importante - Leia antes de baixar</h3>
             </div>
-            <p>1. Esta ISO é uma versão modificada do Windows 11 LTSC. Use apenas para fins de teste e avaliação.</p>
-            <p>2. Recomendamos a instalação em máquina virtual ou hardware dedicado para testes.</p>
-            <p>3. Verifique sempre a integridade do arquivo após o download.</p>
-            <p>4. Mantenha backups importantes antes de qualquer instalação.</p>
+            <p>1. Esta ISO é uma versão modificada do Windows 11 LTSC. Está funcionando Perfeitamente.</p>
+            <p>2. Windows Não vem com navegador e so ir no pos-install.</p>
+            <p>3. Dentro Da Pos-install tem Antivirus.</p>
+            <p>4. Super Otimizado para Pc Fraco.</p>
+            <p>      SISTEMA TESTADO</p>
+            <p>Processador: Intel Pentium 4.</p>
+            <p>Memoria: 1.5 de ram.</p>
+            <p>Games Testados:"Roblox fps 40 a 50 " "Minecraft fps 70 a 80".</p>
+            <p>"Valorant fps 45 a 50".</p>
         </div>
         
         <div class="download-section">
@@ -314,7 +319,7 @@
                 <i class="fas fa-download icon"></i>
                 BAIXAR AGORA
             </a>
-            <span class="file-size">Tamanho aproximado: ~4.5 GB</span>
+            <span class="file-size">Tamanho aproximado: ~3.5 GB</span>
             
             <div style="margin-top: 30px;">
                 <div style="color: #94a3b8; margin-bottom: 10px;">
