Refactor game test descriptions for clarity

--- a/index.html
+++ b/index.html
@@ -310,7 +310,9 @@
             <p>      SISTEMA TESTADO</p>
             <p>Processador: Intel Pentium 4.</p>
             <p>Memoria: 1.5 de ram.</p>
-            <p>Games Testados:"Roblox fps 40 a 50 " "Minecraft fps 70 a 80".</p>
+            <p>Games Testados</p>
+            <p>Roblox fps 40 a 50.</p>
+            <p>Minecraft fps 70 a 80.</p>
             <p>"Valorant fps 45 a 50".</p>
         </div>
         
