--- a/index.html
+++ b/index.html
@@ -600,22 +600,22 @@
             title: 'BanaOS 11 LTSC 25H2',
             description: 'Sistema Windows 11 LTSC otimizado para PCs de baixo desempenho',
             downloadLink: 'https://4br.me/BanaOS11',
-            systemInfo: `• Hardware: Intel Pentium 4 | 1.5GB RAM
+            systemInfo: `• Hardware: Intel Pentium 4 1.50 GHz | 1.5GB RAM
 • Games Testados: Roblox: 40-50 FPS | Minecraft: 70-80 FPS | Valorant: 45-50 FPS
 • Recursos: Pós-install com navegador e antivírus | Super otimizado para hardware antigo`,
             whyChoose: `✅ <strong>Otimização extrema</strong> para hardware antigo
 ✅ <strong>Windows 11 LTSC</strong> - versão estável e de longo prazo
-✅ <strong>Testado em PC fraco</strong> - Pentium 4 com 1.5GB RAM
+✅ <strong>Testado em PC fraco</strong> - Pentium 4 1.50 GHz com 1.5GB RAM
 ✅ <strong>Pronto para usar</strong> - drivers e programas essenciais incluídos
 ✅ <strong>Segurança</strong> - antivírus e firewall configurados
 ✅ <strong>Suporte a jogos</strong> - performance otimizada para gaming`,
             stats: {
-                totalDownloads: 1247,
-                onlineNow: 42,
-                todayDownloads: 127,
-                downloadsThisHour: 15,
-                peakOnline: 58,
-                currentDownloaders: 12
+                totalDownloads: Indisponivel,
+                onlineNow: Indisponivel,
+                todayDownloads: Indisponivel,
+                downloadsThisHour: Indisponivel,
+                peakOnline: Indisponivel,
+                currentDownloaders: Indisponivel
             }
         };
         
