--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         
         <!-- IMAGEM PRINCIPAL -->
         <div class="main-image">
-            <img src="https://preview--static-image-only.lumi.ing/" 
+            <img src="https://images.unsplash.com/photo-1615796153287-98eacf0abb13?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="BanaOS 11 LTSC"> 
                  alt="BanaOS 11 LTSC Preview" 
                  onerror="this.src='https://preview--static-image-only.lumi.ing/'"
                  loading="lazy">
