Update main image source in index.html

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         
         <!-- IMAGEM PRINCIPAL -->
         <div class="main-image">
-            <img src="https://images.unsplash.com/photo-1615796153287-98eacf0abb13?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="BanaOS 11 LTSC"> 
+            <img src="https://static.lumi.new/98/987569d69e9f0c588cd8c699ffb0c6d6.webp" alt="BanaOs">
                  alt="BanaOS 11 LTSC Preview" 
                  onerror="this.src='https://preview--static-image-only.lumi.ing/'"
                  loading="lazy">
