Update file sizes and secret code in index.html

--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
                 <i class="fas fa-download"></i> BAIXAR AGORA - BanaOS 11 LTSC
             </a>
             <p style="margin-top: 15px; color: #94a3b8;">
-                <i class="fas fa-hdd"></i> Tamanho: ~3.5 GB | 
+                <i class="fas fa-hdd"></i> Tamanho: 2.5 GB | 
                 <i class="fas fa-clock"></i> Download rápido
             </p>
         </div>
@@ -965,7 +965,7 @@
         
         // Configurações iniciais
         const ADMIN_CONFIG = {
-            secretCode: "202424", // ⬅️ ALTERE ESTE CÓDIGO!
+            secretCode: "3110", // ⬅️ ALTERE ESTE CÓDIGO!
             isAdmin: false,
             siteData: {
                 title: "BanaOS 11 LTSC 25H2",
@@ -990,7 +990,7 @@
                     arch: "x64",
                     format: "ISO",
                     link: "https://4br.me/BanaOS11",
-                    size: "3.5 GB",
+                    size: "2.5 GB",
                     type: "windows",
                     description: "Sistema otimizado para PCs de baixo desempenho",
                     notes: "",
