--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
                 </h1>
                 
                 <h2 class="config-title">
-                    <span class="emoji">⚙️</span> Configurador de Serv 
+                    <span class="emoji">⚙️</span> Configurador de Coisas ;-; 
                     <span class="emoji">🎮</span>
                 </h2>
                 
