--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
                 </h1>
                 
                 <h2 class="config-title">
-                    <span class="emoji">⚙️</span> Configurador de Serv 
+                    <span class="emoji">⚙️</span>🐍 Programador /⚙️ Configurador 
                     <span class="emoji">🎮</span>
                 </h2>
                 
