Reorder emojis in config-title header

--- a/index.html
+++ b/index.html
@@ -1156,8 +1156,8 @@
                 </h1>
                 
                 <h2 class="config-title">
-                    <span class="emoji">⚙️</span>🐍 Programador /⚙️ Configurador 
-                    <span class="emoji">🎮</span>
+                    <span class="emoji">🐍</span> Programador /
+                    <span class="emoji">⚙️</span> Configurador
                 </h2>
                 
                 <div class="typewriter-container">
